--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "lint": "eslint src",
     "postversion": "git push --follow-tags",
     "prebuild": "npm run clean && npm run lint && npm run test",
+    "prepublishOnly": "npm run prebuild",
     "preversion": "npm run build",
+    "publish": "npm publish --access=public",
     "test": "vitest run"
   },
-  "version": "1.0.1"
+  "version": "1.0.2"
 }
